<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_name">

    <Preference
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/settings_title" />

    <PreferenceCategory android:title="@string/general_settings">
        <SwitchPreferenceCompat
            android:key="UI_settings_zoom"
            android:summary="@string/zoom_buttons_summary"
            android:title="@string/zoom_buttons"
            android:defaultValue="true"/>
        <SwitchPreferenceCompat
            android:key="UI_settings_compass"
            android:summary="@string/compass_summary"
            android:title="@string/compass"
            android:defaultValue="true"/>
        <SwitchPreferenceCompat
            android:key="UI_settings_my_location"
            android:summary="@string/my_location_button_summary"
            android:title="@string/my_location_button"
            android:defaultValue="true"/>
        <!--<SwitchPreferenceCompat
            android:key="UI_settings_location_info"
            android:summary="@string/my_location_layer_summary"
            android:title="@string/my_location_layer" />-->

        <SwitchPreferenceCompat
            android:key="general_gesture_settings"
            android:summary="@string/all_gestures_summary"
            android:title="@string/all_gestures"
            android:defaultValue="true"/>

        <SwitchPreferenceCompat
            android:dependency="general_gesture_settings"
            android:key="gesture_setting_scroll"
            android:layout="?android:attr/preferenceLayoutChild"
            android:summary="@string/scroll_gestures_summary"
            android:title="@string/scroll_gestures"
            android:defaultValue="true"/>
        <SwitchPreferenceCompat
            android:dependency="general_gesture_settings"
            android:key="gesture_setting_zoom"
            android:layout="?android:attr/preferenceLayoutChild"
            android:summary="@string/zoom_gestures_summary"
            android:title="@string/zoom_gestures"
            android:defaultValue="true"/>
        <SwitchPreferenceCompat
            android:dependency="general_gesture_settings"
            android:key="gesture_setting_tilt"
            android:layout="?android:attr/preferenceLayoutChild"
            android:summary="@string/tilt_gestures_summary"
            android:title="@string/tilt_gestures"
            android:defaultValue="true"/>
        <SwitchPreferenceCompat
            android:dependency="general_gesture_settings"
            android:key="gesture_setting_rotate"
            android:layout="?android:attr/preferenceLayoutChild"
            android:summary="@string/rotate_gestures_summary"
            android:title="@string/rotate_gestures"
            android:defaultValue="true"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/user_style_settings">
        <SwitchPreferenceCompat
            android:key="night_mode_preference"
            android:summary="@string/night_mode_summary"
            android:title="@string/night_mode"
            android:defaultValue="false"/>
        <ListPreference
            android:defaultValue="2"
            android:entries="@array/text_size_names_array"
            android:entryValues="@array/text_size_values_array"
            android:key="text_size"
            android:summary="@string/text_size_summary"
            android:title="@string/text_size" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/regional_settings">
        <CheckBoxPreference
            android:checked="false"
            android:key="language_pl_key"
            android:title="@string/language_pl" />
        <CheckBoxPreference
            android:enabled="false"
            android:key="language_eng_key"
            android:title="@string/language_eng" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/more_information">
        <PreferenceScreen
            android:summary="@string/link_summary"
            android:title="@string/link_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://pg.edu.pl/" />
        </PreferenceScreen>
    </PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>