<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="horizontal"
    android:rowCount="4">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_columnSpan="2"
        android:labelFor="@id/search_input"
        android:text="@string/search_label"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/search_input"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnWeight=".70"
        android:hint="@string/search_placeholder"
        android:inputType="textAutoComplete"
        android:textSize="15sp" />

    <Button
        android:id="@+id/search_button"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnWeight=".30"
        android:drawableStart="@android:drawable/ic_menu_search"
        android:gravity="center"
        android:onClick="getSearchResult"
        android:text="@string/search_button_text" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_row="2"
        android:layout_columnSpan="2" />

</GridLayout>